--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
     "morgan": "~1.9.0",
+    "multer": "^1.3.1",
     "mysql": "^2.15.0",
     "mysql2": "^1.5.3",
     "node-schedule": "^1.3.0",
